--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "numpy>=1.26",
+    "scipy>=1.12",
     "pandas>=2.1",
     "matplotlib>=3.8",
     "ruff>=0.15.2",
+    "mplfinance>=0.12.10b0",
 ]
 
 [dependency-groups]
